--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
     <section id="newsletter">
         <div class="container">
             <h1>Subscribe To Our Newsletter</h1>
-            <form action="#">
-                <input type="email" placeholder="Enter Email..">
+            <form name="newsletter" method="POST" data-netlify="true">
+                <input type="email" name="email" placeholder="Enter your email" required>
                 <button type="submit" class="button_1">Subscribe</button>
             </form>
         </div>
