Added Netlify newsletter form

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <section id="newsletter">
         <div class="container">
             <h1>Subscribe To Our Newsletter</h1>
-            <form name="subscribe" method="POST" data-netlify="true" action="/thanks.html>
+            <form name="subscribe" method="POST" data-netlify="true" action="thanks.html">
                 <input type="hidden" name="form-name" value="subscribe">
                 <input type="email" name="email" placeholder="Enter your email" required>
                 <button type="submit" class="button_1">Subscribe</button>
